# sdp_gurobi_explainability

./: answer copy.ipynb  answer.ipynb  answer_paul.ipynb  main.py  model.ilp  pyproject.toml  question1.py  question2.py  question3.py  question4.py  tp00.ipynb
data/: data27crit.xlsx
