[project]
name = "sdp-gurobi-explainability"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gurobipy>=13.0.0",
    "pandas>=2.3.3",
    "pip>=25.3",
    "pyexcel>=0.7.4",
    "pyexcel-xls>=0.7.1",
    "pyexcel-xlsx>=0.6.1",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.1",
]
